ghc/compiler/tests/typecheck/should_fail/tcfail033.hs
-- from Jon Hill

buglet = [ x | (x,y) <- buglet ]
